syntax = "proto3";

option java_multiple_files = true;
option java_package = "cloud";

import "shared/message.proto";

message CloudRequest {
    string assetFolder = 1;
    bytes data = 2;
    string resourceType = 3; 
}

message CloudUrl {
    string url = 1;
}
service CloudService {
    rpc upload(CloudRequest) returns (CloudUrl);
    rpc delete(CloudUrl) returns (shared.Message);
}
